# empty_repo_prototyp_001

./: .gitignore  README.md  package.json  test_frontend.html  test_scanner.py  vite.config.js
nlp_app/: pubspec.yaml
nlp_app/lib/: main.dart
nlp_app/native/: bridge_generated.io.rs  build.rs
nlp_app/native/nlp_lib/: Cargo.toml
nlp_app/native/nlp_lib/src/: lib.rs
src/backend/: main.py  requirements.txt
src/backend/scanner/: rvol_scanner.py
src/frontend/: App.jsx  index.html  main.jsx
