[package]
name = "nlp_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = "1.82.0"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This is used to generate the bindings for the specific platform
default = []
ffi = []